--- a/index.html
+++ b/index.html
@@ -8,16 +8,20 @@
 </head>
 
 <body>
+    <!-- hero  -->
     <header>
-        <h1>Taylor Hakes</h1>
-        <div id="intro">
-            <h2>An Artist in the Information Age.</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla blanditiis corrupti modi, unde totam est ipsa quas eum reiciendis, esse ab, enim eius iste voluptas sequi dolore ipsam itaque ut.</p>
+        <div id="title">
+            <h1>&lt;Taylor Hakes /&gt;</h1>
+            <div id="intro">
+                <h2>An Artist in the Information Age.</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla blanditiis corrupti modi, unde totam est ipsa quas eum reiciendis, esse ab, enim eius iste voluptas sequi dolore ipsam itaque ut.</p>
+            </div>
         </div>
+        <!-- navigation  -->
         <nav>
             <ul>
                 <li>
-                    <a href="#about">About</a>
+                    <a href="#about">About 🡇</a>
                 </li>
                 <li>
                     <a href="#creations">Creations</a>
@@ -28,10 +32,12 @@
             </ul>
         </nav>
     </header>
+    <!-- about page  -->
     <section id="about">
-        <h1>ABOUT</h1>
+        <h1>ABOUT </h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo modi corporis doloremque natus doloribus reiciendis nihil suscipit, ducimus in. Officiis illo magni corporis itaque blanditiis dolorem expedita architecto hic officia.</p>
     </section>
+    <!-- creations page  -->
     <section id="creations">
         <h1>CREATIONS</h1>
         <div class="run-buddy">
@@ -44,12 +50,17 @@
 
         </div>
     </section>
+    <!-- contact page  -->
     <section id="reach-me">
         <a href="">tg.hakes@gmail.com</a>
         <a href="">801.857.6170</a>
         <img src="" href="" alt="" />
         <img src="" href="" alt="" />
     </section>
+    <!-- footer  -->
+    <footer>
+        <h3>Created by me - 2021</h3>
+    </footer>
 </body>
 
 </html>
