finish header style

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <!-- hero  -->
     <header>
         <div id="title">
-            <h1>&lt;Taylor Hakes /&gt;</h1>
+            <div id="name">
+                <h1>&lt;Taylor Hakes /&gt;</h1>
+            </div>
             <div id="intro">
                 <h2>An Artist in the Information Age.</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla blanditiis corrupti modi, unde totam est ipsa quas eum reiciendis, esse ab, enim eius iste voluptas sequi dolore ipsam itaque ut.</p>
@@ -21,7 +23,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#about">About 🡇</a>
+                    <a href="#about">About</a>
                 </li>
                 <li>
                     <a href="#creations">Creations</a>
