--- a/index.html
+++ b/index.html
@@ -73,16 +73,22 @@
         </div>
     </section>
     <!-- contact page  -->
-    <section id="reach-me" class="major-section">
-        <div class="section-title">
+    <section id="reach-me" class="minor-section">
+        <div class="section-title minor">
             <h1>Reach<span>_</span>Me</h1>
         </div>
-
-        <div class="content-block">
-            <a href="">tg.hakes@gmail.com</a>
-            <a href="">801.857.6170</a>
-            <img src="" href="" alt="" />
-            <img src="" href="" alt="" />
+        <div class="content-block contact">
+            <a href="https://github.com/SadboiTay" target="_blank">
+                <img src="/assets/images/github.png" alt="" />
+            </a>
+            <a href="https://www.linkedin.com/in/taylor-hakes-7798b2215/" target="_blank">
+                <img src="/assets/images/linkedin.png" href="" alt="" />
+            </a>
+            <a href="https://open.spotify.com/user/t.hakes?si=967d2bbafe3143a8" target="_blank">
+                <img src="/assets/images/spotify.png" alt="" />
+            </a>
+            <div><a href="mailto:tg.hakes@gmail.com">tg.hakes@gmail.com</a></div>
+            <div><a href="tel:801-857-6170">801.857.6170</a></div>
         </div>
     </section>
     <!-- footer  -->
