trying to fix hero image

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <img src="/assets/images/github.png" alt="" />
             </a>
             <a href="https://www.linkedin.com/in/taylor-hakes-7798b2215/" target="_blank">
-                <img src="/assets/images/linkedin.png" href="" alt="" />
+                <img src="/assets/images/linkedin.png" alt="" />
             </a>
             <a href="https://open.spotify.com/user/t.hakes?si=967d2bbafe3143a8" target="_blank">
                 <img src="/assets/images/spotify.png" alt="" />
