fix image paths

--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
         </div>
         <div class="content-block contact">
             <a href="https://github.com/SadboiTay" target="_blank">
-                <img src="/assets/images/github.png" alt="" />
+                <img src="./assets/images/github.png" alt="The Github logo">
             </a>
             <a href="https://www.linkedin.com/in/taylor-hakes-7798b2215/" target="_blank">
-                <img src="/assets/images/linkedin.png" alt="" />
+                <img src="./assets/images/linkedin.png" alt="The Linkdin logo">
             </a>
             <a href="https://open.spotify.com/user/t.hakes?si=967d2bbafe3143a8" target="_blank">
-                <img src="/assets/images/spotify.png" alt="" />
+                <img src="./assets/images/spotify.png" alt="The Spotify logo">
             </a>
             <div><a href="mailto:tg.hakes@gmail.com">tg.hakes@gmail.com</a></div>
             <div><a href="tel:801-857-6170">801.857.6170</a></div>
