still fixing image paths

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </div>
             </a>
             <!-- lil card -->
-            <a href="/index.html" class="lil-card img3" target="_blank">
+            <a href="https://sadboitay.github.io/pro-portfolio/" class="lil-card img3" target="_blank">
                 <div class="hover" target="_blank">
                     <span>My Portfolio</span>
                 </div>
