media queries, hero redesign

--- a/index.html
+++ b/index.html
@@ -10,13 +10,24 @@
 <body>
     <!-- hero  -->
     <header>
-        <div id="title">
-            <div id="name">
-                <h1><a href="/index.html"><span>&lt;</span>Taylor Hakes <span>/&gt;</span></a></h1>
+        <!-- name section -->
+        <div id="name">
+            <h1><a href="/index.html"><span>&lt;</span>Taylor Hakes <span>/&gt;</span></a></h1>
+            <h2>Not all code is created equal.</h2>
+        </div>
+        <!-- intro block section  -->
+        <div id="intro-block">
+            <div class="sub-block">
+                <img src="./assets/images/code.png">
+                <h3>Code that's lean</h3>
             </div>
-            <div id="intro">
-                <h2>An Artist in the Information Age.</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla blanditiis corrupti modi, unde totam est ipsa quas eum reiciendis, esse ab, enim eius iste voluptas sequi dolore ipsam.</p>
+            <div class="sub-block">
+                <img src="./assets/images/between.png">
+                <h3>Everything in between</h3>
+            </div>
+            <div class="sub-block">
+                <img src="./assets/images/broom.png">
+                <h3>Code that's clean</h3>
             </div>
         </div>
         <!-- navigation  -->
@@ -41,7 +52,13 @@
         </div>
         <div class="content-block">
             <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo modi corporis doloremque natus doloribus reiciendis nihil suscipit, ducimus in. Officiis illo magni corporis itaque blanditiis dolorem expedita architecto hic officia. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque fugiat, nobis minus dolores inventore debitis illum cumque asperiores sapiente laudantium porro nesciunt ab, saepe dicta odit recusandae laborum beatae optio?
+                As a web developer in a cluttered world, I appreciate the process and fulfillment of bringing order to chaos. Whether it be breathing new life into legacy content, or starting with a blank slate and building applications from scratch, I tackle every project with eagerness and enthusiasm. 
+            </p>
+            <p>
+                I fell in love with code at the University of Utah in 2021. The unlimited potential to create, reach others, and involve myself in almost any industry was exciting.  
+            </p>
+            <p>
+                Learning is one of my favorite experiences. You'll never know everything about every programming language.. but I believe those who hunger for knowledge will be fed.
             </p>
         </div>
     </section>
@@ -87,8 +104,12 @@
             <a href="https://open.spotify.com/user/t.hakes?si=967d2bbafe3143a8" target="_blank">
                 <img src="./assets/images/spotify.png" alt="The Spotify logo">
             </a>
-            <div><a href="mailto:tg.hakes@gmail.com">tg.hakes@gmail.com</a></div>
-            <div><a href="tel:801-857-6170">801.857.6170</a></div>
+            <div><a href="mailto:tg.hakes@gmail.com">
+                <img src="./assets/images/email.png" alt="Email Icon">
+            </a></div>
+            <div><a href="tel:801-857-6170">
+                <img src="./assets/images/phone-call.png" alt="Phone Icon">
+            </a></div>
         </div>
     </section>
     <!-- footer  -->
