--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- name section -->
         <div id="name">
             <h1><a href="/index.html"><span>&lt;</span>Taylor Hakes <span>/&gt;</span></a></h1>
-            <h2>Not all code is created equal.</h2>
+            <h2><em>Not all code is created equal.</em></h2>
         </div>
         <!-- intro block section  -->
         <div id="intro-block">
