--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <!-- name section -->
         <div id="name">
-            <h1><a href="/index.html"><span>&lt;</span>Taylor Hakes <span>/&gt;</span></a></h1>
+            <h1><a href="https://sadboitay.github.io/pro-portfolio/"><span>&lt;</span>Taylor Hakes <span>/&gt;</span></a></h1>
             <h2><em>Not all code is created equal.</em></h2>
         </div>
         <!-- intro block section  -->
