quality of life

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 As a web developer in a cluttered world, I appreciate the process and fulfillment of bringing order to chaos. Whether it be breathing new life into legacy content, or starting with a blank slate and building applications from scratch, I tackle every project with eagerness and enthusiasm. 
             </p>
             <p>
-                I fell in love with code at the University of Utah in 2021. The unlimited potential to create, reach others, and involve myself in almost any industry was exciting.  
+                I fell in love with coding at the University of Utah in 2021. The unlimited potential to create, reach others, and involve myself in almost any industry was exciting.  
             </p>
             <p>
                 Learning is one of my favorite experiences. You'll never know everything about every programming language.. but I believe those who hunger for knowledge will be fed.
