--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
         <div class="content-block">
             <p>
-                As a web developer in a cluttered world, I appreciate the process and fulfillment of bringing order to chaos. Whether it be breathing new life into legacy content, or starting with a blank slate and building applications from scratch, I tackle every project with eagerness and enthusiasm. 
+                As a web developer in a cluttered world, I appreciate the process and fulfillment of bringing order to chaos. Whether it's breathing new life into legacy content, or starting with a blank slate and building applications from scratch, I tackle every project with eagerness and enthusiasm. 
             </p>
             <p>
                 I fell in love with coding at the University of Utah in 2021. The unlimited potential to create, reach others, and involve myself in almost any industry was exciting.  
