update creations tabs with latest project/challenges

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>T. Hakes - Developer</title>
+    <link href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Poiret+One&family=Raleway:wght@300&family=WindSong:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 
@@ -70,21 +71,21 @@
         </div>
         <div class="creations-block">
             <!-- big card  -->
-            <a href="https://sadboitay.github.io/run-buddy/" class="big-card" alt="A glimpse of the Run Buddy landing Page" target="_blank">
+            <a href="https://austinxewell.github.io/git-n-shape/" class="big-card" alt="A glimpse of the Run Buddy landing Page" target="_blank">
                 <div class="hover">
-                    <span>Run Buddy</span>
+                    <span>Git N Shape</span>
                 </div>
             </a>
             <!-- lil card  -->
-            <a href="https://sadboitay.github.io/code-refactor/" class="lil-card" target="_blank">
+            <a href="https://sadboitay.github.io/weather-dashboard/" class="lil-card" target="_blank">
                 <div class="hover">
-                    <span>Horiseon</span>
+                    <span>Weather Dashboard</span>
                 </div>
             </a>
             <!-- lil card -->
-            <a href="https://sadboitay.github.io/pro-portfolio/" class="lil-card img3" target="_blank">
+            <a href="https://sadboitay.github.io/work-day-scheduler/" class="lil-card img3" target="_blank">
                 <div class="hover" target="_blank">
-                    <span>My Portfolio</span>
+                    <span>Workday Scheduler</span>
                 </div>
             </a>
         </div>
